Saving work before instroduction of ArrayListDeserializer
Signed-off-by: clinique <gael@lhopital.org>